fixed spacing

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/components/_presentations.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/components/_presentations.scss
@@ -132,7 +132,7 @@
 			text-decoration: underline;
 		}
 	}
-	&__presenters {
+	&__meta {
 		margin: 30px 0;
 	}
 	&__date-views-wrapper {
@@ -145,9 +145,9 @@
 		justify-content: space-between;
 	}
 	&__date {
-		margin: 30px 0;
+		text-align: left;
 	}
 	&__views {
-		margin: 30px 0;
+		text-align: right;
 	}
 }
